[package]
name = "forward_http_reqs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"]}
actix-web = {version = "4.4.0"}
lazy_static = {version = "1.4.0" }