[package]
name = "hyper_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.1", features = ["full"] }
native-tls = "0.2.11"
tokio = { version = "1.35.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tower-service = "0.3.2"