[package]
name = "rust-async-recursion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = {version = "1.0.5"}
rand = {version = "0.8.5"}
serde = {version = "1.0.194", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.110"