[package]
name = "test_iglu_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
jsonschema = "0.17.1"
reqwest = "0.11"
http = "0.2"
log = "0.4"

[build-dependencies]
# Optional: If you are using the "log" crate in your build scripts
log = "0.4"