[package]
name = "refresh_ahead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros" ] }
futures-util = "0.3.1"